--- a/example3.html
+++ b/example3.html
@@ -1,9 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-	<title>Example 2</title>
+	<title>Example 3</title>
 	<meta charset="utf-8" />
 	<style>
+		body {
+			margin: 0px;
+		}
+
 		#frame {
 			height: 500px;
 			overflow-y: scroll;
@@ -14,7 +18,7 @@
 		}
 
 		#exampleDivs {
-			position: fixed;
+			position: relative;
 
 			display: flex;
 			flex-direction: row;
@@ -24,10 +28,10 @@
 			margin-right: 20px;
 			height: 500px;
 
+			display: table;
 			box-sizing: border-box;
 			width: 200px;
 			padding: 10px;
-			overflow: auto;
 
 			font-family: Calibri;
 			font-size: 20px;
@@ -36,13 +40,13 @@
 		}
 
 		#div_a {
-			line-height: 60px;
+			line-height: 20px;
 
 			background-color: #000000;
 		}
 
 		#div_b {
-			line-height: 50px;
+			line-height: 30px;
 
 			background-color: #222222;
 		}
@@ -54,15 +58,23 @@
 		}
 
 		#div_d {
-			line-height: 30px;
+			line-height: 50px;
 
 			background-color: #666666;
 		}
 
 		#div_e {
-			line-height: 20px;
+			line-height: 60px;
 
 			background-color: #888888;
+		}
+
+		.placeholder_div {
+			margin-right: 20px;
+			
+			display: none;
+			width: 200px;
+			height: 100px;
 		}
 	</style>
 </head>
@@ -70,19 +82,22 @@
 	<script src="scroll.js"></script>
 	<script>
 		var divs = ["div_a", "div_b", "div_c", "div_d", "div_e"];
-		var containerId = "container";
+		var placeholderDivs = ["placeholderDiv_a", "placeholderDiv_b", "placeholderDiv_c", "placeholderDiv_d", "placeholderDiv_e"];
 		var frameId = "frame";
 	</script>
 
-	<div id="frame" onscroll="scrollToEnd(divs, frameId, containerId);">
-		<div id="container">
-			<div id="exampleDivs">
-				<div class="example_div" id="div_a"></div>
-				<div class="example_div" id="div_b"></div>
-				<div class="example_div" id="div_c"></div>
-				<div class="example_div" id="div_d"></div>
-				<div class="example_div" id="div_e"></div>
-			</div>
+	<div id="frame" onscroll="scrollThenFix(divs, placeholderDivs, frameId);">
+		<div id="exampleDivs">
+			<div class="example_div" id="div_a"></div>
+			<div class="placeholder_div" id="placeholderDiv_a"></div>
+			<div class="example_div" id="div_b"></div>
+			<div class="placeholder_div" id="placeholderDiv_b"></div>
+			<div class="example_div" id="div_c"></div>
+			<div class="placeholder_div" id="placeholderDiv_c"></div>
+			<div class="example_div" id="div_d"></div>
+			<div class="placeholder_div" id="placeholderDiv_d"></div>
+			<div class="example_div" id="div_e"></div>
+			<div class="placeholder_div" id="placeholderDiv_e"></div>
 		</div>
 	</div>
 
